--- a/css/css-style.css
+++ b/css/css-style.css
@@ -1716,17 +1716,17 @@ h1, h2, h3, h4, h5,
       display: none; } }
   .wrap p {
     font-size: 13px;
-    color: rgba(255, 255, 255, 0.8); }
+    color: #000000; }
   .wrap .phone {
     font-size: 13px;
-    color: rgba(255, 255, 255, 0.8); }
+    color:  #000000; }
     .wrap .phone a {
-      color: #fff;
+      color:  #000000;
       font-size: 12px; }
     .wrap .phone .fa {
-      color: rgba(255, 255, 255, 0.8); }
+      color:  #000000; }
     .wrap .phone .mailus {
-      color: rgba(255, 255, 255, 0.6); }
+      color:  #000000; }
 
 .social-media {
   display: inline-block; }
@@ -1737,9 +1737,9 @@ h1, h2, h3, h4, h5,
     margin: 0 3px;
     border-radius: 50%; }
     .social-media p a span {
-      color: #fff; }
+      color:  #000000; }
     .social-media p a:hover span {
-      color: #fff; }
+      color:  #000000; }
 
 .ftco-navbar-light {
   background: transparent !important;
@@ -1763,7 +1763,7 @@ h1, h2, h3, h4, h5,
     margin: 0 auto;
     padding: 0; }
   .ftco-navbar-light .navbar-brand {
-    color: #fff;
+    color: #9acb56;
     padding-top: 1.5rem;
     padding-bottom: 1.5rem; }
     @media (max-width: 991.98px) {
@@ -1786,11 +1786,11 @@ h1, h2, h3, h4, h5,
       padding-bottom: 1.5rem;
       padding-left: 20px;
       padding-right: 20px;
-      color: #fff;
+      color: #000000;
       font-weight: 500;
       opacity: 1 !important; }
       .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover, .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:focus {
-        color: #fff; }
+        color: #000000; }
       @media (max-width: 991.98px) {
         .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
           padding-left: 0;
@@ -1941,14 +1941,14 @@ h1, h2, h3, h4, h5,
     color: rgba(255, 255, 255, 0.8);
     z-index: 3; }
     .hero-wrap .slider-text .subheading {
-      font-size: 24px;
-      color: rgba(255, 255, 255, 0.9);
+      font-size: 40px;
+      color: #000000;
       display: inline-block;
       margin-bottom: 10px;
       font-family: "Reenie Beanie", cursive; }
     .hero-wrap .slider-text h1 {
       font-size: 60px;
-      color: #fff;
+      color: #000000;
       line-height: 1.2;
       font-weight: 300;
       font-family: "Poppins", Arial, sans-serif; }
@@ -1956,7 +1956,8 @@ h1, h2, h3, h4, h5,
         .hero-wrap .slider-text h1 {
           font-size: 36px; } }
     .hero-wrap .slider-text p {
-      font-weight: 400; }
+      font-weight: 400;
+      color: #000000; }
       .hero-wrap .slider-text p strong {
         font-weight: 700; }
         .hero-wrap .slider-text p strong a {
